# Tupi_Engine

./: Cargo.toml  LICENSE.md  Makefile  README.md  empacotar.py  main.lua  main_bytecode_loader.c  tupi_map_editor.py
include/glad/: glad.h
src/: camera.rs  colisores.rs  fisica.rs  glad.c  lib.rs  mapas.rs  renderizador.rs  sprites.rs
src/Camera/: Camera.c  Camera.h  Cameradx11.c
src/Colisores/: ColisoesAABB.c  ColisoesAABB.h  ColisoesG.rs  Fisica.c  Fisica.h
src/Engine/: TupiEngine.lua  camera.lua  cenas.lua  colisao.lua  engineffi.lua  fisica.lua  input.lua  janela.lua  mapas.lua  render.lua  sprite.lua  texto.lua
src/Inputs/: Inputs.c  Inputs.h  Inputsdx11.c  inputsdx11.h
src/Mapas/: Mapas.c  Mapas.h
src/Renderizador/: RendererDX11.c  RendererDX11.h  RendererGL.c  RendererGL.h
src/Sprites/: Sprites.c  Sprites.h  Spritesdx11.c  Spritesdx11.h
